Fix nav menu link overflow on desktop

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,10 @@ hr {
         border: dotted 1px #2faded;
     }
 
+    .nav-menu a {
+        font-size: 1.5vmax;
+    }
+
     .content {
         padding: 20px;
     }
